--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,91 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.product-details {
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 50%;
+  /* Default width for larger screens */
+
+  @media (max-width: 768px) {
+    /* Styles for screens with a maximum width of 768px (e.g., mobile devices) */
+    width: 90%;
+  }
+}
+
+/* Default styles for larger screens */
+.product {
+  display: flex;
+  justify-content: center;
+}
+
+.product-details {
+  width: 50%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.product-image {
+  width: 500px;
+  height: 500px;
+}
+
+/* Media query for screens smaller than 768px (e.g., mobile) */
+@media (max-width: 767px) {
+  .product {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-details {
+    width: 90%; /* Adjust the width for smaller screens */
+    margin: 20px 0;
+  }
+
+  .product-image {
+    width: 100%; /* Adjust the image width to fit the smaller screen */
+    height: auto;
+  }
+}
+/* ----------- */
+/* Default styles for larger screens */
+.product {
+  display: flex;
+  justify-content: center;
+}
+
+.product-details {
+  width: 50%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.product-image {
+  width: 500px;
+  height: 500px;
+}
+
+/* Media query for screens smaller than 768px (e.g., mobile) */
+@media (max-width: 767px) {
+  .product {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-details {
+    width: 90%;
+    /* Adjust the width for smaller screens */
+    margin: 20px 0;
+  }
+
+  .product-image {
+    width: 100%;
+    /* Adjust the image width to fit the smaller screen */
+    height: auto;
+  }
+}
