--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,6 @@ body {
   /* Default width for larger screens */
 
   @media (max-width: 768px) {
-    /* Styles for screens with a maximum width of 768px (e.g., mobile devices) */
     width: 90%;
   }
 }
@@ -66,50 +65,88 @@ body {
   }
 
   .product-details {
-    width: 90%; /* Adjust the width for smaller screens */
-    margin: 20px 0;
-  }
-
-  .product-image {
-    width: 100%; /* Adjust the image width to fit the smaller screen */
-    height: auto;
-  }
-}
-/* ----------- */
-/* Default styles for larger screens */
-.product {
-  display: flex;
-  justify-content: center;
-}
-
-.product-details {
-  width: 50%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.product-image {
-  width: 500px;
-  height: 500px;
-}
-
-/* Media query for screens smaller than 768px (e.g., mobile) */
-@media (max-width: 767px) {
-  .product {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .product-details {
     width: 90%;
-    /* Adjust the width for smaller screens */
     margin: 20px 0;
   }
 
   .product-image {
     width: 100%;
-    /* Adjust the image width to fit the smaller screen */
     height: auto;
   }
+}
+/* Default styles for larger screens */
+.product {
+  display: flex;
+  justify-content: center;
+}
+
+.product-details {
+  width: 50%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.product-image {
+  width: 500px;
+  height: 500px;
+}
+
+/* Media query for screens smaller than 768px (e.g., mobile) */
+@media (max-width: 767px) {
+  .product {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .product-details {
+    width: 90%;
+    margin: 20px 0;
+  }
+
+  .product-image {
+    width: 100%;
+    height: auto;
+  }
+}
+
+/* PAGINATION */
+.container {
+  padding: 0 2rem;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+.pageLink {
+  cursor: pointer;
+}
+
+/* pagination pageItem */
+.pageItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #eaeaea;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+/* pagination page item when active */
+.pageItemActive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border: 1px solid #eaeaea;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background-color: red;
 }
