--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@ body {
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 50%;
-  /* Default width for larger screens */
+  text-align: left;
 
   @media (max-width: 768px) {
     width: 90%;
@@ -41,20 +41,16 @@ body {
 
 /* Default styles for larger screens */
 .product {
+  margin: 0 auto;
+  text-align: center;
   display: flex;
   justify-content: center;
 }
 
-.product-details {
-  width: 50%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
 .product-image {
-  width: 500px;
-  height: 500px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  text-align: left;
 }
 
 /* Media query for screens smaller than 768px (e.g., mobile) */
@@ -67,45 +63,11 @@ body {
   .product-details {
     width: 90%;
     margin: 20px 0;
-  }
-
-  .product-image {
-    width: 100%;
     height: auto;
   }
-}
-/* Default styles for larger screens */
-.product {
-  display: flex;
-  justify-content: center;
-}
-
-.product-details {
-  width: 50%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.product-image {
-  width: 500px;
-  height: 500px;
-}
-
-/* Media query for screens smaller than 768px (e.g., mobile) */
-@media (max-width: 767px) {
-  .product {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .product-details {
-    width: 90%;
-    margin: 20px 0;
-  }
 
   .product-image {
-    width: 100%;
+    width: 90%;
     height: auto;
   }
 }
